Upgraded code to JDK 23 and JavaFX 23.