@@ -1,63 +1,32 @@
-/***********************************************************************
- *  Copyright - Secretariat of the Pacific Community                   *
- *  Droit de copie - Secrétariat Général de la Communauté du Pacifique *
- *  http://www.spc.int/                                                *
- ***********************************************************************/
+/*
+ Copyright - Pacific Community
+ Droit de copie - Communauté du Pacifique
+ http://www.spc.int/
+*/
 package org.spc.health.epidemydesign;
 
-import java.io.File;
-import java.io.FileInputStream;
-import java.io.FileOutputStream;
-import java.io.FileReader;
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.LineNumberReader;
-import java.io.PrintWriter;
-import java.net.URL;
-import java.nio.file.Files;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.LinkedList;
-import java.util.Set;
-import java.util.List;
-import java.util.Optional;
-import java.util.Properties;
-import java.util.ResourceBundle;
-import java.util.logging.Level;
-import java.util.logging.Logger;
 import javafx.animation.PauseTransition;
 import javafx.application.Platform;
-import javafx.application.Application;
 import javafx.beans.InvalidationListener;
 import javafx.beans.Observable;
 import javafx.beans.binding.BooleanBinding;
-import javafx.beans.value.ObservableValue;
-import javafx.concurrent.Service;
-import javafx.concurrent.Task;
-import javafx.fxml.FXMLLoader;
 import javafx.collections.FXCollections;
 import javafx.collections.ListChangeListener;
 import javafx.collections.ListChangeListener.Change;
 import javafx.collections.ObservableList;
-import javafx.collections.transformation.FilteredList;
-import javafx.concurrent.WorkerStateEvent;
+import javafx.concurrent.Service;
+import javafx.concurrent.Task;
 import javafx.css.PseudoClass;
 import javafx.event.ActionEvent;
 import javafx.fxml.FXML;
+import javafx.fxml.FXMLLoader;
 import javafx.fxml.Initializable;
 import javafx.scene.Group;
-import javafx.scene.Node;
 import javafx.scene.control.ComboBox;
 import javafx.scene.control.Label;
-import javafx.scene.control.ListView;
 import javafx.scene.control.MenuItem;
 import javafx.scene.control.SplitMenuButton;
-import javafx.scene.layout.BorderPane;
-import javafx.scene.layout.HBox;
-import javafx.scene.layout.Priority;
-import javafx.scene.layout.Region;
-import javafx.scene.layout.VBox;
-import javafx.scene.layout.StackPane;
+import javafx.scene.layout.*;
 import javafx.scene.paint.Color;
 import javafx.stage.FileChooser;
 import javafx.util.Duration;
@@ -67,23 +36,80 @@ import org.spc.health.epidemydesign.control.infectioneditor.InfectionEditorContr
 import org.spc.health.epidemydesign.control.stateeditor.StateEditorController;
 import org.spc.health.epidemydesign.task.GenerationTask;
 
+import java.io.*;
+import java.net.URL;
+import java.nio.file.Files;
+import java.util.*;
+import java.util.logging.Level;
+import java.util.logging.Logger;
+
 /**
  * The main UI controller.
+ *
  * @author Fabrice Bouyé (fabriceb@spc.int)
  */
 public final class MainUIController extends ControllerBase implements Initializable {
 
     private static final Logger LOGGER = Logger.getLogger(MainUIController.class.getName());
     private static final String ENCODING = "UTF-8";
-
+    private final File homeFolder;
+    private final File templateFolder;
+    private final File fxmlFile;
+    private final File cssFile;
+    private final File infectionsFile;
+    private final File statesFile;
+    private final ObservableList<State> states = FXCollections.observableList(new LinkedList<>());
+    private final ObservableList<Infection> infections = FXCollections.observableList(new LinkedList<>());
+    /**
+     * Called whenever the state list of an infection changes content.
+     */
+    private final ListChangeListener<State> invalidationStateListChangeListener = _ -> Platform.runLater(() -> {
+        try {
+            saveInfectionsToTemplate();
+        } catch (IOException ex) {
+            LOGGER.log(Level.SEVERE, ex.getMessage(), ex);
+        }
+    });
+    private final Duration timerDuration = Duration.millis(750);
     @FXML
     private VBox cssContent;
     @FXML
     private VBox fxmlContent;
     @FXML
     private VBox previewPane;
+    private final ListChangeListener<State> statesListChangeListener = (final Change<? extends State> _) -> Platform.runLater(() -> {
+        try {
+            saveStatesToTemplate();
+            populatePreviewPane();
+        } catch (IOException ex) {
+            LOGGER.log(Level.SEVERE, ex.getMessage(), ex);
+        }
+    });
     @FXML
     private ComboBox<Infection> previewCombo;
+    ////////////////////////////////////////////////////////////////////////////
+    private final ListChangeListener<Infection> infectionsListChangeListener = (final Change<? extends Infection> _) -> {
+        final var comboList = new LinkedList<Infection>();
+        comboList.add(null);
+        comboList.addAll(infections);
+        previewCombo.getItems().setAll(comboList);
+        comboList.clear();
+    };
+    /**
+     * Called whenever selection in the preview combo changes.
+     */
+    private final InvalidationListener previewSelectionInvalidationListener = (Observable _) -> Platform.runLater(this::changePreviewLabels);
+    /**
+     * Called whenever one of the text values of an infection changes.
+     */
+    private final InvalidationListener infectionValueInvalidationListener = (Observable _) -> Platform.runLater(() -> {
+        try {
+            saveInfectionsToTemplate();
+            changePreviewLabels();
+        } catch (IOException ex) {
+            LOGGER.log(Level.SEVERE, ex.getMessage(), ex);
+        }
+    });
     @FXML
     private SplitMenuButton loadCSSButton;
     @FXML
@@ -94,18 +120,27 @@ public final class MainUIController extends ControllerBase implements Initializa
     private InfectionEditorController infectionEditorController;
     @FXML
     private GeneratePaneController generatePaneController;
-
-    private final File homeFolder;
-    private final File templateFolder;
-    private final File fxmlFile;
-    private final File cssFile;
-    private final File infectionsFile;
-    private final File statesFile;
-    private final ObservableList<State> states = FXCollections.observableList(new LinkedList<>());
-    private final ObservableList<Infection> infections = FXCollections.observableList(new LinkedList<>());
-
     private CodeEditor cssEditor;
     private CodeEditor fxmlEditor;
+    /**
+     * This binding is used to control whenever the code editor has been initialized.
+     * <br/>It's a member to avoid early GC.
+     */
+    private BooleanBinding codeEditorInitialized;
+
+    ////////////////////////////////////////////////////////////////////////////    
+    ////////////////////////////////////////////////////////////////////////////
+    private PauseTransition waitTimer = null;
+    /**
+     * Called whenever the text in one of the editor has been modified.
+     */
+    private final InvalidationListener textInvalitationListener = _ -> requestSaveAndReload();
+
+    ////////////////////////////////////////////////////////////////////////////
+    /**
+     * The service that generates the images.
+     */
+    private Service<Void> generationService;
 
     public MainUIController() throws IOException {
         homeFolder = new File(System.getProperty("user.home"), ".EpidemyDesign"); // NOI18N.
@@ -134,12 +169,6 @@ public final class MainUIController extends ControllerBase implements Initializa
         }
     }
 
-    /**
-     * This binding is used to control whenever the code editor have been initialized.
-     * <br/>It's a member in order to avoid early GC.
-     */
-    private BooleanBinding codeEditorInitialized;
-
     @Override
     public void initialize(URL url, ResourceBundle rb) {
         infections.addListener(infectionsListChangeListener);
@@ -153,9 +182,9 @@ public final class MainUIController extends ControllerBase implements Initializa
         //
         stateEditorController.applicationProperty().bind(applicationProperty());
         stateEditorController.setStates(states);
-        stateEditorController.setOnSave((final ActionEvent actionEvent) -> saveStatesMayBe());
-        stateEditorController.setOnLoad((final ActionEvent actionEvent) -> importStatesMayBe());
-        stateEditorController.setOnDefault((final ActionEvent actionEvent) -> {
+        stateEditorController.setOnSave(_ -> saveStatesMayBe());
+        stateEditorController.setOnLoad(_ -> importStatesMayBe());
+        stateEditorController.setOnDefault(_ -> {
             try {
                 exportStatesFromSource();
                 reloadStatesFromTemplate();
@@ -175,9 +204,9 @@ public final class MainUIController extends ControllerBase implements Initializa
         infectionEditorController.applicationProperty().bind(applicationProperty());
         infectionEditorController.setInfections(infections);
         infectionEditorController.setStates(states);
-        infectionEditorController.setOnSave((final ActionEvent actionEvent) -> saveInfectionsMayBe());
-        infectionEditorController.setOnLoad((final ActionEvent actionEvent) -> importInfectionsMayBe());
-        infectionEditorController.setOnDefault((final ActionEvent actionEvent) -> {
+        infectionEditorController.setOnSave(_ -> saveInfectionsMayBe());
+        infectionEditorController.setOnLoad(_ -> importInfectionsMayBe());
+        infectionEditorController.setOnDefault(_ -> {
             try {
                 exportInfectionsFromSource();
                 reloadInfectionsFromTemplate();
@@ -185,7 +214,7 @@ public final class MainUIController extends ControllerBase implements Initializa
                 LOGGER.log(Level.SEVERE, ex.getMessage(), ex);
             }
         });
-        infectionEditorController.setOnSelectFile((final File file) -> {
+        infectionEditorController.setOnSelectFile(file -> {
             try {
                 clearInfections();
                 reloadInfectionsFromFile(file);
@@ -196,11 +225,11 @@ public final class MainUIController extends ControllerBase implements Initializa
         //
         //
         generatePaneController.applicationProperty().bind(applicationProperty());
-        generatePaneController.setOnGenerate((final ActionEvent actionEvent) -> generateOutput());
+        generatePaneController.setOnGenerate(_ -> generateOutput());
         //
         previewCombo.valueProperty().addListener(previewSelectionInvalidationListener);
         previewCombo.setButtonCell(new InfectionListCell());
-        previewCombo.setCellFactory((final ListView<Infection> listView) -> new InfectionListCell());
+        previewCombo.setCellFactory(_ -> new InfectionListCell());
         previewCombo.setValue(null);
         // CSS editor.
         cssEditor = new CodeEditor();
@@ -228,7 +257,7 @@ public final class MainUIController extends ControllerBase implements Initializa
                 return cssReady && fxmlReady;
             }
         };
-        codeEditorInitialized.addListener((final ObservableValue<? extends Boolean> observableValue, final Boolean oldValue, final Boolean newValue) -> {
+        codeEditorInitialized.addListener((_, _, newValue) -> {
             if (newValue) {
                 try {
                     cssEditor.setMode(CodeEditor.Mode.CSS);
@@ -249,41 +278,6 @@ public final class MainUIController extends ControllerBase implements Initializa
         });
     }
 
-    ////////////////////////////////////////////////////////////////////////////
-    private final ListChangeListener<Infection> infectionsListChangeListener = (final Change<? extends Infection> change) -> {
-        final List<Infection> comboList = new LinkedList<>();
-        comboList.add(null);
-        comboList.addAll(infections);
-        previewCombo.getItems().setAll(comboList);
-        comboList.clear();
-    };
-
-    private final ListChangeListener<State> statesListChangeListener = (final Change<? extends State> change) -> {
-        Platform.runLater(() -> {
-            try {
-                saveStatesToTemplate();
-                populatePreviewPane();
-            } catch (IOException ex) {
-                LOGGER.log(Level.SEVERE, ex.getMessage(), ex);
-            }
-        });
-    };
-
-    /**
-     * Called whenever selection in the preview combo changes.
-     */
-    private final InvalidationListener previewSelectionInvalidationListener = (Observable observable) -> {
-        Platform.runLater(() -> {
-            changePreviewLabels();
-        });
-    };
-
-    /**
-     * Called whenever the text in one of the editor has been modified.
-     */
-    private final InvalidationListener textInvalitationListener = (Observable observable) -> requestSaveAndReload();
-
-    ////////////////////////////////////////////////////////////////////////////    
     /**
      * Repopulate the preview pane.
      */
@@ -292,38 +286,38 @@ public final class MainUIController extends ControllerBase implements Initializa
         previewPane.getChildren().clear();
         try {
             // Try to load the node to see if it works or not.
-            final URL fxmlURL = fxmlFile.toURI().toURL();
-            final URL cssURL = cssFile.toURI().toURL();
-            final File tempCSSFile = File.createTempFile(cssFile.getName(), null);
-            try (final FileOutputStream tempCSSOutput = new FileOutputStream(tempCSSFile)) {
+            final var fxmlURL = fxmlFile.toURI().toURL();
+            final var cssURL = cssFile.toURI().toURL();
+            final var tempCSSFile = File.createTempFile(cssFile.getName(), null);
+            try (final var tempCSSOutput = new FileOutputStream(tempCSSFile)) {
                 Files.copy(cssFile.toPath(), tempCSSOutput);
             }
-            final URL tempCSSURL = tempCSSFile.toURI().toURL();
-            final FXMLLoader fxmlLoader = new FXMLLoader(fxmlURL);
-            final Region node = fxmlLoader.load();
+            final var tempCSSURL = tempCSSFile.toURI().toURL();
+            final var fxmlLoader = new FXMLLoader(fxmlURL);
+            final var node = fxmlLoader.<Region>load();
 //            node.getStylesheets().add(cssURL.toExternalForm());
             node.getStylesheets().add(tempCSSURL.toExternalForm());
             // Load new previews.
-            states.forEach((final State state) -> {
+            states.forEach((final var state) -> {
                 try {
-                    final FXMLLoader fxmlLoader1 = new FXMLLoader(fxmlURL);
-                    final Region node1 = fxmlLoader1.load();
+                    final var fxmlLoader1 = new FXMLLoader(fxmlURL);
+                    final var node1 = fxmlLoader1.<Region>load();
 //                    node1.getStylesheets().add(cssURL.toExternalForm());
                     node1.getStylesheets().add(tempCSSURL.toExternalForm());
-                    final PseudoClass pseudoClass = PseudoClass.getPseudoClass(state.getName());
+                    final var pseudoClass = PseudoClass.getPseudoClass(state.getName());
                     node1.pseudoClassStateChanged(pseudoClass, true);
-                    final Group stateGroup = new Group(node1);
-                    stateGroup.setId("stateGroup_" + state); // NOI18N.
+                    final var stateGroup = new Group(node1);
+                    stateGroup.setId("stateGroup_%s".formatted(state)); // NOI18N.
                     StackPane statePreviewPane = new StackPane(stateGroup);
                     statePreviewPane.getStyleClass().add("preview-pane"); // NOI18N.
-                    final Label stateLabel = new Label();
-                    stateLabel.setId("stateLabel_" + state); // NOI18N.
+                    final var stateLabel = new Label();
+                    stateLabel.setId("stateLabel_%s".formatted(state)); // NOI18N.
                     stateLabel.getStyleClass().add("state-label");
                     stateLabel.setText(state.getName());
-                    final HBox stateActionBar = new HBox();
+                    final var stateActionBar = new HBox();
                     stateActionBar.getStyleClass().add("action-bar"); // NOI18N.
                     stateActionBar.getChildren().add(stateLabel);
-                    final BorderPane previewThumbnail = new BorderPane();
+                    final var previewThumbnail = new BorderPane();
                     previewThumbnail.getStyleClass().add("preview-thumbnail"); // NOI18N.
                     previewThumbnail.setTop(stateActionBar);
                     previewThumbnail.setCenter(statePreviewPane);
@@ -340,18 +334,19 @@ public final class MainUIController extends ControllerBase implements Initializa
 
     private void changePreviewLabels() {
         Platform.runLater(() -> {
-            final Infection infection = previewCombo.getValue();
-            final String text = (infection == null) ? I18N.getString("LABEL_LABEL") : infection.getName(); // NOI18N.
-            final Set<Node> allLabels = previewPane.lookupAll(".label"); // NOI18N.
-            allLabels.stream().map((Node node) -> (Label) node).forEach((Label label) -> {
-                if (!label.getId().contains("stateLabel")) {
-                    label.setText(text);
-                }
-            });
+            final var infection = previewCombo.getValue();
+            final var text = (infection == null) ? I18N.getString("label.label") : infection.getName(); // NOI18N.
+            final var allLabels = previewPane.lookupAll(".label"); // NOI18N.
+            allLabels.stream()
+                    .map(node -> (Label) node)
+                    .forEach(label -> {
+                        if (!label.getId().contains("stateLabel")) {
+                            label.setText(text);
+                        }
+                    });
         });
     }
 
-    ////////////////////////////////////////////////////////////////////////////
     /**
      * Called whenever the default button of the preview pane is clicked.
      */
@@ -387,13 +382,15 @@ public final class MainUIController extends ControllerBase implements Initializa
      */
     @FXML
     private void handleCSSLink(final ActionEvent actionEvent) {
-        final Optional<Application> application = Optional.ofNullable(getApplication());
-        application.ifPresent((Application app) -> {
-            // @todo get URL from properties.
-            final String url = "http://docs.oracle.com/javafx/2/api/javafx/scene/doc-files/cssref.html";
-            app.getHostServices().showDocument(url);
-        });
+        Optional.ofNullable(getApplication())
+                .ifPresent(app -> {
+                    // @todo get URL from properties.
+                    final String url = "http://docs.oracle.com/javafx/2/api/javafx/scene/doc-files/cssref.html";
+                    app.getHostServices().showDocument(url);
+                });
     }
+
+    ////////////////////////////////////////////////////////////////////////////
 
     /**
      * Called whenever the FXML default button is clicked.
@@ -428,45 +425,46 @@ public final class MainUIController extends ControllerBase implements Initializa
         importTemplateMayBe(fxmlEditor, "fxml", loadFXMLButton); // NOI18N.
     }
 
-    ////////////////////////////////////////////////////////////////////////////
     /**
      * Display a file dialog box that allows the user to export a template.
+     *
      * @param codeEditor Source code editor.
-     * @param extension File extension to use.
+     * @param extension  File extension to use.
      * @param loadButton The associated load button.
      */
     private void exportTemplateMayBe(final CodeEditor codeEditor, final String extension, final SplitMenuButton loadButton) {
-        final FileChooser dialog = prepareInputFileDialog("template", extension);
-        final File file = dialog.showSaveDialog(loadButton.getScene().getWindow());
-        if (file != null) {
-            Settings.getPrefs().put("last.input.folder", file.getParent()); // NOI18N.
-            try {
-                exportTemplateToFile(codeEditor, file);
-                addFileToLoadButton(codeEditor, loadButton, file);
-            } catch (IOException ex) {
-                LOGGER.log(Level.SEVERE, ex.getMessage(), ex);
-            }
-        }
+        final var dialog = prepareInputFileDialog("template", extension);
+        Optional.ofNullable(dialog.showSaveDialog(loadButton.getScene().getWindow()))
+                .ifPresent(file -> {
+                    Settings.getPrefs().put("last.input.folder", file.getParent()); // NOI18N.
+                    try {
+                        exportTemplateToFile(codeEditor, file);
+                        addFileToLoadButton(codeEditor, loadButton, file);
+                    } catch (IOException ex) {
+                        LOGGER.log(Level.SEVERE, ex.getMessage(), ex);
+                    }
+                });
     }
 
     /**
      * Prepare the file dialog for input files.
-     * @param prefix File prefix to be used.
+     *
+     * @param prefix    File prefix to be used.
      * @param extension File extension to be used.
      * @return A {@code FileChooser} instance, never {@code null}.
      */
     private FileChooser prepareInputFileDialog(final String prefix, final String extension) {
-        final String userHome = System.getProperty("user.home"); // NOI18N.
-        final String path = Settings.getPrefs().get("last.input.folder", userHome); // NOI18N.
-        File folder = new File(path);
+        final var userHome = System.getProperty("user.home"); // NOI18N.
+        final var path = Settings.getPrefs().get("last.input.folder", userHome); // NOI18N.
+        var folder = new File(path);
         folder = (!folder.exists()) ? new File(userHome) : folder;
-        final FileChooser dialog = new FileChooser();
-        final String allDescription = I18N.getString("ALL_FILES_LABEL"); // NOI18N.
-        final String allExtension = String.format(I18N.getString("EXTENSION_XX_TEMPLATE"), "*"); // NOI18N.
-        final FileChooser.ExtensionFilter allFilter = new FileChooser.ExtensionFilter(allDescription, allExtension);
-        final String extensionDescription = String.format(I18N.getString("FILE_XX_TEMPLATE"), extension.toUpperCase()); // NOI18N.
-        final String extensionExtension = String.format(I18N.getString("EXTENSION_XX_TEMPLATE"), extension); // NOI18N.
-        final FileChooser.ExtensionFilter extensionFilter = new FileChooser.ExtensionFilter(extensionDescription, extensionExtension);
+        final var dialog = new FileChooser();
+        final var allDescription = I18N.getString("all-files.label"); // NOI18N.
+        final var allExtension = String.format(I18N.getString("extension-xx.template"), "*"); // NOI18N.
+        final var allFilter = new FileChooser.ExtensionFilter(allDescription, allExtension);
+        final var extensionDescription = String.format(I18N.getString("file-xx.template"), extension.toUpperCase()); // NOI18N.
+        final var extensionExtension = String.format(I18N.getString("extension-xx.template"), extension); // NOI18N.
+        final var extensionFilter = new FileChooser.ExtensionFilter(extensionDescription, extensionExtension);
         dialog.getExtensionFilters().setAll(extensionFilter, allFilter);
         dialog.setSelectedExtensionFilter(extensionFilter);
         dialog.setInitialDirectory(folder);
@@ -476,23 +474,24 @@ public final class MainUIController extends ControllerBase implements Initializa
 
     /**
      * Add selected file to the load button's menu.
+     *
      * @param codeEditor The code editor (used when activating the menu item).
      * @param loadButton The load button which will host the menu.
-     * @param file The source file.
+     * @param file       The source file.
      */
     private void addFileToLoadButton(final CodeEditor codeEditor, final SplitMenuButton loadButton, final File file) {
         boolean found = false;
-        for (final MenuItem menuItem : loadButton.getItems()) {
-            final File itemFile = (File) menuItem.getProperties().get("file"); // NOI18N.
+        for (final var menuItem : loadButton.getItems()) {
+            final var itemFile = (File) menuItem.getProperties().get("file"); // NOI18N.
             if (file.equals(itemFile)) {
                 found = true;
                 break;
             }
         }
         if (!found) {
-            final MenuItem menuItem = new MenuItem(file.getAbsolutePath());
+            final var menuItem = new MenuItem(file.getAbsolutePath());
             menuItem.getProperties().put("file", file); // NOI18N.
-            menuItem.setOnAction((final ActionEvent actionEvent) -> {
+            menuItem.setOnAction(_ -> {
                 try {
                     reloadTextFromTemplate(file, codeEditor);
                 } catch (IOException ex) {
@@ -505,54 +504,56 @@ public final class MainUIController extends ControllerBase implements Initializa
 
     /**
      * Save current template into selected file.
+     *
      * @param editor The source editor.
-     * @param file The target file.
+     * @param file   The target file.
      * @throws IOException In case of IO error.
      */
     private void exportTemplateToFile(final CodeEditor editor, final File file) throws IOException {
-        final String text = editor.getText();
-        try (PrintWriter printWriter = new PrintWriter(file, ENCODING)) {
+        final var text = editor.getText();
+        try (final var printWriter = new PrintWriter(file, ENCODING)) {
             printWriter.print(text);
         }
     }
 
     /**
      * Display a file dialog box that allows the user to import a template.
+     *
      * @param codeEditor Source code editor.
-     * @param extension File extension to use.
+     * @param extension  File extension to use.
      * @param loadButton The associated load button.
      */
     private void importTemplateMayBe(final CodeEditor codeEditor, final String extension, final SplitMenuButton loadButton) {
-        final FileChooser dialog = prepareInputFileDialog("template", extension);
-        final File file = dialog.showOpenDialog(loadButton.getScene().getWindow());
-        if (file != null) {
-            Settings.getPrefs().put("last.input.folder", file.getParent()); // NOI18N.
-            try {
-                reloadTextFromTemplate(file, codeEditor);
-                addFileToLoadButton(codeEditor, loadButton, file);
-            } catch (IOException ex) {
-                LOGGER.log(Level.SEVERE, ex.getMessage(), ex);
-            }
-        }
+        final var dialog = prepareInputFileDialog("template", extension);
+        Optional.ofNullable(dialog.showOpenDialog(loadButton.getScene().getWindow()))
+                .ifPresent(file -> {
+                    Settings.getPrefs().put("last.input.folder", file.getParent()); // NOI18N.
+                    try {
+                        reloadTextFromTemplate(file, codeEditor);
+                        addFileToLoadButton(codeEditor, loadButton, file);
+                    } catch (IOException ex) {
+                        LOGGER.log(Level.SEVERE, ex.getMessage(), ex);
+                    }
+                });
     }
 
     private void exportCSSFromSource() throws IOException {
-        final URL url = getClass().getResource("template/template.css"); // NOI18N.
+        final var url = getClass().getResource("template/template.css"); // NOI18N.
         exportSourceToTemplate(url, cssFile);
     }
 
     private void exportFXMLFromSource() throws IOException {
-        final URL url = getClass().getResource("template/template.fxml"); // NOI18N.
+        final var url = getClass().getResource("template/template.fxml"); // NOI18N.
         exportSourceToTemplate(url, fxmlFile);
     }
 
     private void exportInfectionsFromSource() throws IOException {
-        final URL url = getClass().getResource("template/infections.properties"); // NOI18N.
+        final var url = getClass().getResource("template/infections.properties"); // NOI18N.
         exportSourceToTemplate(url, infectionsFile);
     }
 
     private void exportStatesFromSource() throws IOException {
-        final URL url = getClass().getResource("template/states.properties"); // NOI18N.
+        final var url = getClass().getResource("template/states.properties"); // NOI18N.
         exportSourceToTemplate(url, statesFile);
     }
 
@@ -560,7 +561,7 @@ public final class MainUIController extends ControllerBase implements Initializa
         if (file.exists()) {
             file.delete();
         }
-        try (final InputStream input = url.openStream()) {
+        try (final var input = url.openStream()) {
             Files.copy(input, file.toPath());
         }
     }
@@ -574,10 +575,10 @@ public final class MainUIController extends ControllerBase implements Initializa
     }
 
     private void reloadTextFromTemplate(final File file, final CodeEditor editor) throws IOException {
-        try (final FileReader fileReader = new FileReader(file)) {
-            try (final LineNumberReader lineReader = new LineNumberReader(fileReader)) {
-                final StringBuilder builder = new StringBuilder();
-                for (String line = lineReader.readLine(); line != null; line = lineReader.readLine()) {
+        try (final var fileReader = new FileReader(file)) {
+            try (final var lineReader = new LineNumberReader(fileReader)) {
+                final var builder = new StringBuilder();
+                for (var line = lineReader.readLine(); line != null; line = lineReader.readLine()) {
                     builder.append(line);
                     builder.append("\n");
                 }
@@ -596,24 +597,24 @@ public final class MainUIController extends ControllerBase implements Initializa
     }
 
     private void reloadStatesFromFile(final File file) throws IOException {
-        final Properties fileContent = new Properties();
-        try (final FileInputStream input = new FileInputStream(file)) {
+        final var fileContent = new Properties();
+        try (final var input = new FileInputStream(file)) {
             fileContent.load(input);
         }
-        final List<String> values = new ArrayList<>(fileContent.stringPropertyNames());
+        final var values = new ArrayList<>(fileContent.stringPropertyNames());
         Collections.sort(values);
-        values.stream().map((final String value) -> {
-            final String color = fileContent.getProperty(value);
-            final State state = initializeState(value, color);
-            return state;
-        }).forEach((state) -> states.add(state));
+        values.stream()
+                .map(value -> {
+                    final var color = fileContent.getProperty(value);
+                    return initializeState(value, color);
+                })
+                .forEach(states::add);
         Collections.sort(states);
     }
 
     private State initializeState(final String name, final String colorName) {
-        final Color color = (colorName == null || colorName.trim().isEmpty()) ? Color.BLACK : Color.valueOf(colorName);
-        final State state = new State(name, color);
-        return state;
+        final var color = (Objects.isNull(colorName) || colorName.isBlank()) ? Color.BLACK : Color.valueOf(colorName);
+        return new State(name, color);
     }
 
     private void reloadInfectionsFromTemplate() throws IOException {
@@ -622,7 +623,7 @@ public final class MainUIController extends ControllerBase implements Initializa
     }
 
     private void clearInfections() {
-        infections.forEach((final Infection infection) -> {
+        infections.forEach(infection -> {
             infection.nameProperty().removeListener(infectionValueInvalidationListener);
             infection.fileNameProperty().removeListener(infectionValueInvalidationListener);
             infection.getStates().removeListener(invalidationStateListChangeListener);
@@ -631,31 +632,31 @@ public final class MainUIController extends ControllerBase implements Initializa
     }
 
     private void reloadInfectionsFromFile(final File file) throws IOException {
-        final Properties fileContent = new Properties();
-        try (final FileInputStream input = new FileInputStream(file)) {
+        final var fileContent = new Properties();
+        try (final var input = new FileInputStream(file)) {
             fileContent.load(input);
         }
-        final List<String> values = new ArrayList<>(fileContent.stringPropertyNames());
+        final var values = new ArrayList<>(fileContent.stringPropertyNames());
         Collections.sort(values);
-        values.forEach((final String value) -> {
-            final String name = value.replaceAll("_", " "); // NOI18N.
-            final String line = fileContent.getProperty(value);
-            final String[] lineTokens = line.split("\\|"); // NOI18N.
-            final String fileName = (line.contains("|") || lineTokens.length > 1) ? lineTokens[0] : null; // NOI18N.
-            final Infection infection = new Infection(name, fileName);
-            final String statesLine = (lineTokens.length == 1) ? (line.contains("|") ? "" : lineTokens[0]) : lineTokens[1]; // NOI18N.
-            final String[] tokens = statesLine.split("\\s+"); // NOI18N.
-            for (final String token : tokens) {
-                final String stateName = token.trim();
+        values.forEach(value -> {
+            final var name = value.replaceAll("_", " "); // NOI18N.
+            final var line = fileContent.getProperty(value);
+            final var lineTokens = line.split("\\|"); // NOI18N.
+            final var fileName = (line.contains("|") || lineTokens.length > 1) ? lineTokens[0] : null; // NOI18N.
+            final var infection = new Infection(name, fileName);
+            final var statesLine = (lineTokens.length == 1) ? (line.contains("|") ? "" : lineTokens[0]) : lineTokens[1]; // NOI18N.
+            final var tokens = statesLine.split("\\s+"); // NOI18N.
+            for (final var token : tokens) {
+                final var stateName = token.trim();
                 if (stateName.isEmpty()) {
                     continue;
                 }
-                final FilteredList<State> filteredStates = states.filtered((state) -> token.equals(state.getName()));
+                final var filteredStates = states.filtered((state) -> token.equals(state.getName()));
                 if (filteredStates.isEmpty()) {
-                    final State state = initializeState(token, null);
+                    final var state = initializeState(token, null);
                     states.add(state);
                 }
-                infection.getStates().add(filteredStates.get(0));
+                infection.getStates().add(filteredStates.getFirst());
             }
             infection.nameProperty().addListener(infectionValueInvalidationListener);
             infection.fileNameProperty().addListener(infectionValueInvalidationListener);
@@ -666,33 +667,6 @@ public final class MainUIController extends ControllerBase implements Initializa
         Collections.sort(infections);
     }
 
-    /**
-     * Called whenever one of the text values of an infection changes.
-     */
-    private final InvalidationListener infectionValueInvalidationListener = (Observable observable) -> {
-        Platform.runLater(() -> {
-            try {
-                saveInfectionsToTemplate();
-                changePreviewLabels();
-            } catch (IOException ex) {
-                LOGGER.log(Level.SEVERE, ex.getMessage(), ex);
-            }
-        });
-    };
-
-    /**
-     * Called whenever the state list of an infection changes content.
-     */
-    private final ListChangeListener<State> invalidationStateListChangeListener = (ListChangeListener.Change<? extends State> change) -> {
-        Platform.runLater(() -> {
-            try {
-                saveInfectionsToTemplate();
-            } catch (IOException ex) {
-                LOGGER.log(Level.SEVERE, ex.getMessage(), ex);
-            }
-        });
-    };
-
     private void saveCSSToTemplate() throws IOException {
         saveCodeToFile(cssEditor, cssFile);
     }
@@ -702,40 +676,40 @@ public final class MainUIController extends ControllerBase implements Initializa
     }
 
     private void saveCodeToFile(final CodeEditor editor, final File file) throws IOException {
-        try (final PrintWriter writer = new PrintWriter(file, ENCODING)) {
-            final String text = editor.getText();
+        try (final var writer = new PrintWriter(file, ENCODING)) {
+            final var text = editor.getText();
             writer.println(text);
         }
     }
 
     private void importStatesMayBe() {
-        final FileChooser dialog = prepareInputFileDialog("states", "properties");
-        final File file = dialog.showOpenDialog(loadCSSButton.getScene().getWindow());
-        if (file != null) {
-            Settings.getPrefs().put("last.input.folder", file.getParent()); // NOI18N.
-            try {
-                clearStates();
-                reloadStatesFromFile(file);
-                if (!stateEditorController.getRecentFiles().contains(file)) {
-                    stateEditorController.getRecentFiles().add(file);
-                }
-            } catch (IOException ex) {
-                LOGGER.log(Level.SEVERE, ex.getMessage(), ex);
-            }
-        }
+        final var dialog = prepareInputFileDialog("states", "properties");
+        Optional.ofNullable(dialog.showOpenDialog(loadCSSButton.getScene().getWindow()))
+                .ifPresent(file -> {
+                    Settings.getPrefs().put("last.input.folder", file.getParent()); // NOI18N.
+                    try {
+                        clearStates();
+                        reloadStatesFromFile(file);
+                        if (!stateEditorController.getRecentFiles().contains(file)) {
+                            stateEditorController.getRecentFiles().add(file);
+                        }
+                    } catch (IOException ex) {
+                        LOGGER.log(Level.SEVERE, ex.getMessage(), ex);
+                    }
+                });
     }
 
     private void saveStatesMayBe() {
-        final FileChooser dialog = prepareInputFileDialog("states", "properties"); // NOI18N.
-        final File file = dialog.showSaveDialog(loadCSSButton.getScene().getWindow());
-        if (file != null) {
-            Settings.getPrefs().put("last.input.folder", file.getParent()); // NOI18N.
-            try {
-                saveStatesToFile(file);
-            } catch (IOException ex) {
-                LOGGER.log(Level.SEVERE, ex.getMessage(), ex);
-            }
-        }
+        final var dialog = prepareInputFileDialog("states", "properties"); // NOI18N.
+        Optional.ofNullable(dialog.showSaveDialog(loadCSSButton.getScene().getWindow()))
+                .ifPresent(file -> {
+                    Settings.getPrefs().put("last.input.folder", file.getParent()); // NOI18N.
+                    try {
+                        saveStatesToFile(file);
+                    } catch (IOException ex) {
+                        LOGGER.log(Level.SEVERE, ex.getMessage(), ex);
+                    }
+                });
     }
 
     private void saveStatesToTemplate() throws IOException {
@@ -743,15 +717,15 @@ public final class MainUIController extends ControllerBase implements Initializa
     }
 
     private void saveStatesToFile(final File file) throws IOException {
-        try (final PrintWriter writer = new PrintWriter(file, ENCODING)) {
+        try (final var writer = new PrintWriter(file, ENCODING)) {
             states.forEach((State state) -> {
-                final StringBuilder line = new StringBuilder();
-                final String name = state.getName();
+                final var line = new StringBuilder();
+                final var name = state.getName();
                 line.append(name);
                 line.append("="); // NOI18N.
-                final Color color = state.getColor();
-                if (color != null) {
-                    final String webColor = String.format("#%02X%02X%02X", (int) (color.getRed() * 255), (int) (color.getGreen() * 255), (int) (color.getBlue() * 255)); // NOI18N.
+                final var color = state.getColor();
+                if (Objects.nonNull(color)) {
+                    final var webColor = String.format("#%02X%02X%02X", (int) (color.getRed() * 255), (int) (color.getGreen() * 255), (int) (color.getBlue() * 255)); // NOI18N.
                     line.append(webColor);
                 }
                 writer.println(line.toString().trim());
@@ -760,33 +734,33 @@ public final class MainUIController extends ControllerBase implements Initializa
     }
 
     private void importInfectionsMayBe() {
-        final FileChooser dialog = prepareInputFileDialog("infections", "properties");
-        final File file = dialog.showOpenDialog(loadCSSButton.getScene().getWindow());
-        if (file != null) {
-            Settings.getPrefs().put("last.input.folder", file.getParent()); // NOI18N.
-            try {
-                clearInfections();
-                reloadInfectionsFromFile(file);
-                if (!infectionEditorController.getRecentFiles().contains(file)) {
-                    infectionEditorController.getRecentFiles().add(file);
-                }
-            } catch (IOException ex) {
-                LOGGER.log(Level.SEVERE, ex.getMessage(), ex);
-            }
-        }
+        final var dialog = prepareInputFileDialog("infections", "properties");
+        Optional.ofNullable(dialog.showOpenDialog(loadCSSButton.getScene().getWindow()))
+                .ifPresent(file -> {
+                    Settings.getPrefs().put("last.input.folder", file.getParent()); // NOI18N.
+                    try {
+                        clearInfections();
+                        reloadInfectionsFromFile(file);
+                        if (!infectionEditorController.getRecentFiles().contains(file)) {
+                            infectionEditorController.getRecentFiles().add(file);
+                        }
+                    } catch (IOException ex) {
+                        LOGGER.log(Level.SEVERE, ex.getMessage(), ex);
+                    }
+                });
     }
 
     private void saveInfectionsMayBe() {
-        final FileChooser dialog = prepareInputFileDialog("infections", "properties"); // NOI18N.
-        final File file = dialog.showSaveDialog(loadCSSButton.getScene().getWindow());
-        if (file != null) {
-            Settings.getPrefs().put("last.input.folder", file.getParent()); // NOI18N.
-            try {
-                saveInfectionsToFile(file);
-            } catch (IOException ex) {
-                LOGGER.log(Level.SEVERE, ex.getMessage(), ex);
-            }
-        }
+        final var dialog = prepareInputFileDialog("infections", "properties"); // NOI18N.
+        Optional.ofNullable(dialog.showSaveDialog(loadCSSButton.getScene().getWindow()))
+                .ifPresent(file -> {
+                    Settings.getPrefs().put("last.input.folder", file.getParent()); // NOI18N.
+                    try {
+                        saveInfectionsToFile(file);
+                    } catch (IOException ex) {
+                        LOGGER.log(Level.SEVERE, ex.getMessage(), ex);
+                    }
+                });
     }
 
     private void saveInfectionsToTemplate() throws IOException {
@@ -794,18 +768,18 @@ public final class MainUIController extends ControllerBase implements Initializa
     }
 
     private void saveInfectionsToFile(final File file) throws IOException {
-        try (final PrintWriter writer = new PrintWriter(file, ENCODING)) {
+        try (final var writer = new PrintWriter(file, ENCODING)) {
             infections.forEach((Infection infection) -> {
-                final StringBuilder line = new StringBuilder();
-                final String name = infection.getName();
+                final var line = new StringBuilder();
+                final var name = infection.getName();
                 line.append(name);
                 line.append("="); // NOI18N.
-                final String fileName = infection.getFileName();
-                if (fileName != null && !fileName.trim().isEmpty()) {
+                final var fileName = infection.getFileName();
+                if (Objects.nonNull(fileName) && !fileName.isBlank()) {
                     line.append(fileName);
                     line.append("|"); // NOI18N.
                 }
-                infection.getStates().forEach((final State state) -> {
+                infection.getStates().forEach(state -> {
                     line.append(state);
                     line.append(" "); // NOI18N.
                 });
@@ -814,28 +788,24 @@ public final class MainUIController extends ControllerBase implements Initializa
         }
     }
 
-    ////////////////////////////////////////////////////////////////////////////
-    private Optional<PauseTransition> waitTimer = Optional.empty();
-    private final Duration timerDuration = Duration.millis(750);
-
     private void requestSaveAndReload() {
-        System.out.println("requestSaveAndReload()");
-        if (!waitTimer.isPresent()) {
-            PauseTransition pauseTransition = new PauseTransition(timerDuration);
-            pauseTransition.setOnFinished((final ActionEvent actionEvent) -> {
-                waitTimer = Optional.empty();
+        LOGGER.log(Level.INFO, "requestSaveAndReload()");
+        if (Objects.isNull(waitTimer)) {
+            final var pauseTransition = new PauseTransition(timerDuration);
+            pauseTransition.setOnFinished(_ -> {
+                waitTimer = null;
                 saveAndReload();
             });
-            waitTimer = Optional.of(pauseTransition);
+            waitTimer = pauseTransition;
         }
-        waitTimer.ifPresent((PauseTransition p) -> p.playFromStart());
+        waitTimer.playFromStart();
     }
 
     /**
      * Save edited text and reload content of preview panel.
      */
     private void saveAndReload() {
-        System.out.println("saveAndReload()");
+        LOGGER.log(Level.INFO, "saveAndReload()");
         try {
             saveCSSToTemplate();
             saveFXMLToTemplate();
@@ -847,42 +817,32 @@ public final class MainUIController extends ControllerBase implements Initializa
         }
     }
 
-    /**
-     * The service that generates the images.
-     */
-    private Service<Void> generationService;
-
     private void generateOutput() {
-        if (generationService != null) {
-            generationService.cancel();
-        } else {
+        Optional.ofNullable(generationService)
+                .ifPresent(Service::cancel);
+        if (Objects.isNull(generationService)) {
             generatePaneController.setProgress(0);
-            generationService = new Service<Void>() {
+            generationService = new Service<>() {
 
                 @Override
                 protected Task<Void> createTask() {
                     // Output folder.
-                    String userHome = System.getProperty("user.home"); // NOI18N.
-                    final String path = Settings.getPrefs().get("last.output.folder", userHome); // NOI18N.
-                    final File folder = new File(path);
+                    final var userHome = System.getProperty("user.home"); // NOI18N.
+                    final var path = Settings.getPrefs().get("last.output.folder", userHome); // NOI18N.
+                    final var folder = new File(path);
                     // Copy infection list.
-                    final List<Infection> infectionList = new LinkedList<>(infections);
+                    final var infectionList = new LinkedList<>(infections);
                     return new GenerationTask(folder, infectionList, fxmlFile, cssFile);
                 }
             };
-            generationService.setOnSucceeded((final WorkerStateEvent workerStateEvent) -> {
-                LOGGER.log(Level.INFO, "Output generation succeeded.");
-            });
-            generationService.setOnCancelled((final WorkerStateEvent workerStateEvent) -> {
-                LOGGER.log(Level.INFO, "Output generation canceled.");
-            });
-            generationService.setOnFailed((final WorkerStateEvent workerStateEvent) -> {
-                final Throwable ex = generationService.getException();
+            generationService.setOnSucceeded(_ -> LOGGER.log(Level.INFO, "Output generation succeeded."));
+            generationService.setOnCancelled(_ -> LOGGER.log(Level.INFO, "Output generation canceled."));
+            generationService.setOnFailed(_ -> {
+                final var ex = generationService.getException();
                 LOGGER.log(Level.SEVERE, ex.getMessage(), ex);
             });
             generatePaneController.progressProperty().bind(generationService.progressProperty());
         }
         generationService.restart();
     }
-
 }
